# VisionCore

./: .gitignore  RowleyTestTiming0.py  V2tracetestingRowley0.py  V2tracetestingRowley1.py  bundle_repo_to_text.py  pyproject.toml  test_rowley2.py  trow10_no
VisionCore/: covariance0.py  dual_window.py
declan/: Empirical Transformation Geometry Analysis.md  FEM_population_coding_writeup.md  FEMs_Eoptotype_checks.md  analysis_plan_jacobian_v3.md  com_dynamics.py  com_dynamics_spec.md  displacement_decoding.py  displacement_decoding_spec.md  eoptotype_continuous_pass.py  eoptotype_jacobian_field_smoothness_handoff.md  fem_covariance_geometry.py  fem_differential_intervention.py  fem_eoptotype_hyperacuity_results.md  fem_global_intervention.py  fem_next_steps_plan.md  fem_path_integrated_separability_handoff.md  figure4_geometry_bridge_audit_plan_v2.md  figure_jacobian_identity_geometry.py  fixrsvp_cross_session_check.md  geometry_utils.py  gru_passthrough_test.py  jacobian_figure_handoff_nature_style.md  jacobian_identity_geometry_results.md  jacobian_identity_transformation_analysis_plan.md  jacobian_predictive_framework_handoff_revised.md  jacobian_predictive_framework_progress_summary.md  jacobian_test3.py  jacobian_test4.py  main_figure_jacobian.py  make_priority2_causal_alignment_figure.py  matched_position_ablation.py  phase_landscape.py  results_summary.md  revised_analysis_plan.md  rowley_luke_2026_03_16_dpi_pupil_intercept_findings.md  rowley_session_config_generation.md  temporal_analysis_issues_and_alternatives.md  temporal_decoding_diagnostic_plan.md  (+10 more)
(+204 files in other folders)
